# music-evolution

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
src/music_evolution/: build_html.py  crawler.py  dedupe.py  enrich_previews.py  gemini_client.py  layout.py  llm_prune.py  normalize.py  postprocess.py  prompts.py  prune.py  rescore_popularity.py  schema.py  seed_loader.py  snapshot.py  template.html
tests/: diagnose_misses.py  smoke_enrich.py
