[project]
name = "music-evolution"
version = "0.1.0"
description = "Recursive music genre lineage crawler + HTML visualization"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-slugify>=8.0.0",
    "streamlit>=1.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_evolution"]

[tool.ruff]
line-length = 100
target-version = "py311"
